--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   <title>Foodmap</title>
 </head>
 <body>
-  <div id="map"></div>
+  <div class="container">
+    <div class="row">
+      <h1 class="styleTitle text-center">Foodmap</h1>  
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+        <div id="map" class="col align-self-center"></div>
+    </div>
+  </div>
 
   <div id="infowindow-content">
     <img src="" width="16" height="16" id="place-icon">
@@ -17,37 +26,44 @@
     <span id="place-address"></span>
   </div>
 
-  <input id="pac-input" type="text" placeholder="busca restaurantes cerca de ti">
-
-  <div id="restaurantes">
-    
-  </div>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="modalBody">
-        
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Pedir Ahora</button>
+  <div class="container">
+    <div class="row">
+      <h2 class="text-center styleSubtitle">Comida cerca de ti</h2>
+    </div>
+    <div class="row">
+      <div class="text-center styleContainerInput">
+        <input id="pac-input" class="styleInput " type="text" placeholder="Busca restaurantes cerca de ti">
       </div>
     </div>
   </div>
-</div>
+  <br>
+  <div>
+    <div id="restaurantes" class="container"></div>
+  </div>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHttd1YYolwh7-DwooymtRmC_Wb58dJVY&libraries=places"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
-    <script src="modal.js"></script>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modalBody">       
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Pedir Ahora</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHttd1YYolwh7-DwooymtRmC_Wb58dJVY&libraries=places"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
