añade estilos a lista

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
   <br>
   <div>
-    <div id="restaurantes" class="container"></div>
+    <div id="restaurantes" class="row"></div>
   </div>
 
   <!-- Modal -->
