--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <title>Foodmap</title>
 </head>
 <body>
+  <div class="vista-splash">
+    <div class="container">
+      <div class="row">
+        <h1 class="style-splash">Foodmap</h1>
+      </div>
+    </div>
+  </div>
+<div class="main-view">
   <div class="container">
     <div class="row">
       <h1 class="styleTitle text-center">Foodmap</h1>  
@@ -59,7 +67,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHttd1YYolwh7-DwooymtRmC_Wb58dJVY&libraries=places"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
