añade funcion filtrar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="vista-splash">
-    <div class="container">
-      <div class="row">
-        <h1 class="style-splash">Foodmap</h1>
+    <div class="style-splash-bg">
+      <div>
+        <h1 class="style-splash">foodmap</h1>
       </div>
     </div>
   </div>
