--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="style-splash-bg">
       <div>
         <h1 class="style-splash">foodmap</h1>
+        <img src="assets/img/load2.gif" alt="">
       </div>
     </div>
   </div>
